# gooseCubeWorld

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
.github/workflows/: cpp_build.yml
cmake/: MinGWToolchain.cmake
github/workflows/: cpp_build.yml  main.yml
include/: ImGuiManager.hpp  advancedGenerator.h  block_outliner.h  camera.h  chunk.h  chunkNode.h  chunk_pool.h  constants.h  crosshair.h  debug_chunks.h  engine_config.h  gpu_culler.h  gpu_memory.h  gui_utils.h  input_manager.h  linearAllocator.h  mesher.h  object_pool.h  packedVertex.h  persistentSSBO.h  playerController.h  profiler.h  renderUtils.h  ringBufferSSBO.h  screen_quad.h  shader.h  splash_screen.hpp  terrain_standard_gen_fast.h  terrain_superflat.h  terrain_superflat_withGlass.h  terrain_system.h  terrain_system_alien_world.h  texture_manager.h  threadpool.h  world.h  world_old.h
include/glad/: glad.h
include/terrain/: advancedGenerator.h  terrain_beach_world.h  terrain_beach_world_2.h  terrain_bizzaro_world.h  terrain_selector_ImGuiExpose.h  terrain_smooth_noise.h  terrain_standard_gen_fast.h  terrain_superflat.h  terrain_superflat_withGlass.h  terrain_system.h
resources/: CULL_COMPUTE.glsl  CULL_FRUSTUM_depricated.glsl  FRAG_PRIMARY.glsl  FRAG_ULTRA.glsl  FRAG_UPGRADED.glsl  HI_Z_DOWN.glsl  VERT_PRIMARY.glsl  VERT_ULTRA.glsl  VERT_UPGRADED.glsl  basicChunkVert.glsl  basicPackedVertexUnwrap.glsl  basicSSBOFragTester.glsl  debug_quad_frag.glsl  debug_quad_vert.glsl
resources/Readables/: Engine_Explanation.txt  fallback_texture_id_table.txt
resources/shaders/: chunkDebugFrag.glsl  chunkDebugVert.glsl  cubeSelectionFrag.glsl  waterFrag.glsl  waterVert.glsl
scripts/: build_windows_release.sh
src/: GPU_CULLING_RENDER_SYSTEM.md  camera.cpp  chunk.cpp  gpu_culler.cpp  main.cpp  terrain_system.cpp
